# django-render

./: README.md  REAME.md  pyproject.toml
mysite/: settings.py  urls.py
