[tool.poetry]
name = "mysite"
version = "0.1.0"
description = "Deploy Django on Render"
authors = ["John Wesonga <johnwesonga@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "3.2.16"
dj-database-url = "^1.1.0"
psycopg2-binary = "^2.9.5"
gunicorn = "^20.1.0"
whitenoise = {extras = ["brotli"], version = "^6.2.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
